Added blog frontend

--- a/Frontend/css/main.css
+++ b/Frontend/css/main.css
@@ -835,6 +835,9 @@ footer .social li {
   #video .right-one .text-left {
     margin-left: 200px;
   }
+	
+ }
+#blog1{
+	background-image:url(../images/bback.jpg)
 }
-
 
